# hackable-engine

./: .gitignore  .pdm-python  .pylintrc  README.md  chess.v4  compile.sh  default.v100  linux_requirements.txt  onnx_hex7  pyproject.toml  requirements.txt  requirements_dev.txt
arek_chess/: __init__.py  __main__.py  common_data_manager.py  constants.py  controller.py  dispatcher.py  messaging.py  search_tree_manager.py
arek_chess/board/: __init__.py  board.py  mypy_chess.py  numba_board.py
arek_chess/board/chess/: chess_board.py
arek_chess/board/go_board/: board.go  c_go_board.c  cffi_builder.py
arek_chess/board/hex/: hex_board.py
arek_chess/board/legacy_board/: board.py  mypy_chess.py
arek_chess/board/mixins/: __init__.py  board_serializer_mixin.py
arek_chess/common/: constants.py  custom_threads.py  exceptions.py  memory_manager.py  profiler_mixin.py  queue_manager.py
arek_chess/common/memory/: base_memory.py  manager.py  pyarrow_plasma_memory.py  redis_memory.py  shared_memory.py
arek_chess/common/queue/: base_queue.py  faster_fifo_queue.py  kafka_queue.py  manager.py  rabbitmq_queue.py  redis_queue.py  wasm_dispatcher.py
arek_chess/criteria/collection/: base_collector.py  simple_collector.py
arek_chess/criteria/evaluation/: arek_eval.py  base_eval.py  fast_eval.py  legacy_eval.py  multi_idea_eval.py  optimized_eval.py  square_control_eval.py
arek_chess/criteria/pre_selection/: base_selector.py  legacy_selector.py
arek_chess/game_tree/: node.py  renderer.py  search_manager.py  traversal.py  traverser.py
arek_chess/graph_training/: requirements.txt
arek_chess/main/: controller.py  dispatcher.py  search_manager.py  search_tree_manager.py
arek_chess/models/: candidate.py
arek_chess/test/: test_controller.py
arek_chess/training/: __init__.py  callbacks.py  export_model.py  hex_cnn_features_extractor.py  hyperparams.py  policies.py  ray_run.py  run.py  run_sequence.sh
arek_chess/utils/: common_data_manager.py  legacy_selector.py  memory_manager.py  messaging.py  queue_manager.py  stoppable_thread.py
arek_chess/wasm/: README.md  export_model.py  index.html  pyproject.toml  serve_wasm.py  worker.js
arek_chess/wasm/js/: distributor_worker.js  eval_worker.js  main.js  nocache.js  search_worker.js  worker.js
arek_chess/workers/: base_worker.py  collector_worker.py  dispatcher_worker.py  distributor_worker.py  eval_worker.py  search_worker.py  selection_worker.py  selector_worker.py
hackable_engine/: __main__.py  controller.py
hackable_engine/board/: __init__.py
hackable_engine/common/: constants.py  custom_threads.py  exceptions.py
hackable_engine/game_tree/: node.py  renderer.py  traverser.py
hackable_engine/graph_training/: graph_rl.py  requirements.txt  run.py
hackable_engine/test/: test_controller.py
hackable_engine/training/: callbacks.py  export_model.py  hex_cnn_features_extractor.py  hyperparams.py  policies.py  ray_run.py  requirements.txt  run.py
hackable_engine/ui/: ui.py
hackable_engine/workers/: base_worker.py  distributor_worker.py  eval_worker.py  search_worker.py
lichess/: run.py
lichess/strategies/: hackable_bot.py
lichess_bot/: config.yml  run.py
lichess_bot/engines/: hackable_bot.sh
training/: run.py
training/envs/: base_env.py
(+222 files in other folders)
