[project]
name = "hackable-bot"
description = "board game playing bot easy to hack in order to change playing approach"
version = "0.0.1"
authors = [
    { name = "Arek Kulczycki" }
]
dependencies = [
    "chess==1.9.*",
    "nptyping==2.5.*",
    "anytree==2.8.*"
]

[options]
package_dir = "src"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"